Add caption to tables, check it's the first element, closes #6

--- a/data-import/data-import-accessible.html
+++ b/data-import/data-import-accessible.html
@@ -428,6 +428,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <ul>
 <li><p>If the Google sheet you want to import is the following:</p>
 <table class="table">
+<caption>Spreadsheet with 5 columns (A through E) and three rows. First row reads x1 through x5. Second and third row have some missing values.</caption>
 <thead>
 <tr class="header">
 <th>A</th>
@@ -519,6 +520,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </div></li>
 <li><p><strong>Column types:</strong></p>
 <table class="table">
+<caption>Table with 5 columns. Column headers are various data types (logical, numeric, text, date, and list). The data in two rows show examples of data for the given column type.</caption>
 <thead>
 <tr class="header">
 <th>logical</th>
@@ -576,9 +578,9 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <ul>
 <li><p>If the Google sheet you want to import is the following:</p>
 <table class="table">
+<caption>Spreadsheet with 5 columns (A through E) and three rows. First row reads x1 through x5. Second and third row have some missing values.</caption>
 <thead>
 <tr class="header">
-<th></th>
 <th>A</th>
 <th>B</th>
 <th>C</th>
@@ -588,7 +590,6 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </thead>
 <tbody>
 <tr class="odd">
-<td>1</td>
 <td>x1</td>
 <td>x2</td>
 <td>x3</td>
@@ -596,7 +597,6 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <td>x5</td>
 </tr>
 <tr class="even">
-<td>2</td>
 <td>x</td>
 <td></td>
 <td>z</td>
@@ -604,7 +604,6 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <td></td>
 </tr>
 <tr class="odd">
-<td>3</td>
 <td>y</td>
 <td>7</td>
 <td></td>
