--- a/strings/strings-accessible.html
+++ b/strings/strings-accessible.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>Apply :: Cheat Sheet</title>
+<title>String manipulation with stringr :: Cheat Sheet</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -104,7 +104,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Apply :: Cheat Sheet</h1>
+<h1 class="title">String manipulation with stringr :: Cheat Sheet</h1>
 </div>
 
 
