Fix image paths

--- a/rmarkdown/rmarkdown-accessible.html
+++ b/rmarkdown/rmarkdown-accessible.html
@@ -162,7 +162,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 <h3 class="anchored" data-anchor-id="source-editor">Source Editor</h3>
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure">
-<p><img src="rmarkdown-images/rmarkdown-images/source-editor.png" class="img-fluid figure-img"></p>
+<p><img src="images/source-editor.png" class="img-fluid figure-img"></p>
 </figure>
 </div>
 <div class="callout callout-style-simple callout-note no-icon callout-titled">
@@ -205,7 +205,7 @@ Expand to read about the features in the Source Editor
 <h3 class="anchored" data-anchor-id="visual-editor">Visual Editor</h3>
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure">
-<p><img src="rmarkdown-images/visual-editor.png" class="img-fluid figure-img"></p>
+<p><img src="images/visual-editor.png" class="img-fluid figure-img"></p>
 </figure>
 </div>
 <div class="callout callout-style-simple callout-note no-icon callout-titled">
@@ -235,7 +235,7 @@ Expand to read about the features in the Visual Editor
 <h3 class="anchored" data-anchor-id="rendered-output">Rendered Output</h3>
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure">
-<p><img src="rmarkdown-images/rendered-output.png" class="img-fluid figure-img"></p>
+<p><img src="images/rendered-output.png" class="img-fluid figure-img"></p>
 </figure>
 </div>
 <div class="callout callout-style-simple callout-note no-icon callout-titled">
@@ -435,10 +435,8 @@ Expand to read about the features in the Rendered Output Window
 <pre><code>Plain text.</code></pre></td>
 <td><h1 id="rendered-output-1">Rendered Output</h1>
 <p>Plain text.</p></td>
-<td></td>
 </tr>
 <tr class="even">
-<td></td>
 <td></td>
 <td></td>
 </tr>
@@ -447,59 +445,48 @@ Expand to read about the features in the Rendered Output Window
 start a new paragraph.</code></pre></td>
 <td><p>End a line with two spaces to</p>
 <p>start a new paragraph.</p></td>
-<td></td>
 </tr>
 <tr class="even">
 <td><pre><code>Also end a line with a backslash\
 to make a new line.</code></pre></td>
 <td><p>Also end a line with a backslash</p>
 <p>to make a new line.</p></td>
-<td></td>
 </tr>
 <tr class="odd">
 <td><pre><code>*italics* and **bold**</code></pre></td>
 <td><em>italics</em> and <strong>bold</strong></td>
-<td></td>
 </tr>
 <tr class="even">
 <td><pre><code>superscript^2^/subscript~2~</code></pre></td>
 <td>superscript<sup>2</sup> /subscript<sub>2</sub></td>
-<td></td>
 </tr>
 <tr class="odd">
 <td><pre><code>~~strike through~~</code></pre></td>
 <td><del>strike through</del></td>
-<td></td>
 </tr>
 <tr class="even">
 <td><pre><code>escaped: \* \_ \\</code></pre></td>
 <td>escaped: * _ \</td>
-<td></td>
 </tr>
 <tr class="odd">
 <td><pre><code>en dash: --, em dash: ---</code></pre></td>
 <td>en dash: –, em dash: —</td>
-<td></td>
 </tr>
 <tr class="even">
 <td><pre><code># Header 1</code></pre></td>
 <td><h1 id="header-1">Header 1</h1></td>
-<td></td>
 </tr>
 <tr class="odd">
 <td><pre><code>## Header 2</code></pre></td>
 <td><h2 id="header-2" class="anchored">Header 2</h2></td>
-<td></td>
 </tr>
 <tr class="even">
 <td><pre><code>...</code></pre></td>
 <td>…</td>
-<td></td>
 </tr>
 <tr class="odd">
 <td><pre><code>###### Header 6</code></pre></td>
 <td><h6 id="header-6" class="anchored">Header 6</h6></td>
-<td></td>
 </tr>
 <tr class="even">
 <td><pre><code>- unordered list
@@ -514,7 +501,6 @@ to make a new line.</code></pre></td>
 <li><p>item 2b</p></li>
 </ul></li>
 </ul></td>
-<td></td>
 </tr>
 <tr class="odd">
 <td><pre><code>1. ordered list
@@ -529,17 +515,14 @@ to make a new line.</code></pre></td>
 <li><p>item 2b</p></li>
 </ul></li>
 </ol></td>
-<td></td>
 </tr>
 <tr class="even">
 <td><pre><code>&lt;link url&gt;</code></pre></td>
 <td><a href="https://posit.co/" class="uri">https://posit.co/</a></td>
-<td></td>
 </tr>
 <tr class="odd">
 <td><pre><code>[This is a link.](link url)</code></pre></td>
 <td><a href="https://posit.co/">This is a link.</a></td>
-<td></td>
 </tr>
 <tr class="even">
 <td><pre><code>[This is another link.][id].
@@ -547,7 +530,6 @@ to make a new line.</code></pre></td>
 At the end of the document:
 [id]: link url</code></pre></td>
 <td><a href="https://posit.co/">This is another link.</a></td>
-<td></td>
 </tr>
 <tr class="odd">
 <td><pre><code>![Caption](image.png)
@@ -558,13 +540,11 @@ or
 
 At the end of the document include:
 [id2]: image.png</code></pre></td>
-<td><img src="rmarkdown-images/rmarkdown-logo.png" class="img-fluid" alt="R Markdown logo" width="300"> | | | | | | | | |</td>
-<td></td>
+<td><img src="images/rmarkdown-logo.png" class="img-fluid" width="300" alt="R Markdown logo"></td>
 </tr>
 <tr class="even">
 <td><pre><code>`verbatim code`</code></pre></td>
 <td><code>verbatim code</code></td>
-<td></td>
 </tr>
 <tr class="odd">
 <td><pre><code>```
@@ -573,19 +553,16 @@ of verbatim code
 ```</code></pre></td>
 <td><pre><code>multiple lines
 of verbatim code</code></pre></td>
-<td></td>
 </tr>
 <tr class="even">
 <td><pre><code>&gt; block quotes</code></pre></td>
 <td><blockquote class="blockquote">
 <p>block quotes</p>
 </blockquote></td>
-<td></td>
 </tr>
 <tr class="odd">
 <td><pre><code>equation: $e^{i \pi} + 1 = 0$</code></pre></td>
 <td>equation: <span class="math inline">\(e^{i \pi} + 1 = 0\)</span></td>
-<td></td>
 </tr>
 <tr class="even">
 <td><pre><code>equation block:
@@ -594,14 +571,12 @@ $$E = mc^{2}$$</code></pre></td>
 <p><span class="math display">\[
 E = mc^{2}
 \]</span></p></td>
-<td></td>
 </tr>
 <tr class="odd">
 <td><pre><code>horizontal rule:
 ---</code></pre></td>
 <td><p>horizontal rule:</p>
 <hr></td>
-<td></td>
 </tr>
 <tr class="even">
 <td><pre><code>|Right|Left|Default|Center|
@@ -642,7 +617,6 @@ Table: Caption text, example rendered table</code></pre></td>
 </tr>
 </tbody>
 </table></td>
-<td></td>
 </tr>
 <tr class="odd">
 <td><p>HTML Tabsets</p>
@@ -664,7 +638,6 @@ more text
 </div>
 </div>
 </div></td>
-<td></td>
 </tr>
 </tbody>
 </table>
